--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,22 @@ pycryptodome
 base58
 pytimeparse
 git+https://github.com/Itz-fork/py-trans.git
+tgcrypto
+asyncio
+ffmpeg-python
+py-tgcalls
+pyrogram==1.4.15
+youtube-search-python==1.4.9
+yt-dlp
+youtube-search
+python-dotenv
+dnspython
+gitpython
+aiofiles
+aiohttp
+requests
+pillow
+heroku3
+psutil
+future
+wget
